<resources>
    <string name="xposed_desc">MIUI12.5插件</string>
    <string name="pref_main_miui_title">MIUI</string>
    <string name="app_name">MIUltra</string>
    <string name="pref_main_system_ui_title">系统界面</string>
    <string name="pref_main_home_title">系统桌面</string>
    <string name="pref_main_power_keeper_title">电量和性能</string>
    <string name="pref_title">小米指纹快捷功能</string>
    <string name="pref_top_title_text">说明</string>
    <string name="pref_app_setting_title_text">模块设置</string>
    <string name="pref_system_ui_top_title_summary">需要重启SystemUI或重启后生效(右上角重启SystemUI)</string>
    <string name="pref_home_top_title_summary">需要重启桌面或重启后生效(右上角重启桌面)</string>
    <string name="pref_power_keeper_top_title_summary">需要强行停止电量和性能后生效(右上角重启电量和性能)</string>
    <string name="pref_main_top_title_summary">请注意部分功能只在稳定版测试生效,实际效果取决于你的系统版本以及对应app的版本</string>
    <string name="hide_app_icon_text">隐藏图标</string>
    <string name="hide_app_icon_on_summary">已隐藏桌面图标,可在xposed框架内打开</string>
    <string name="hide_app_icon_off_summary">已关闭</string>
    <string name="module_status_text">激活状态</string>
    <string name="module_status_on_summary">已激活</string>
    <string name="module_status_off_summary">未激活</string>
    <string name="menu_reboot_system_ui">重启SystemUI</string>
    <string name="menu_reboot_home">重启桌面</string>
    <string name="menu_goto_power_keeper">跳转电量和性能管理界面</string>
    <string name="menu_about_title">关于</string>
    <string name="dialog_about_message">我是 lamprose(离司@CoolApk)</string>
    <string name="pref_notification_blur_style_title">通知栏模糊风格</string>
    <string name="pref_notification_blur_radius_title">模糊半径</string>
    <string name="pref_notification_icon_force_android_style_title">通知栏图标强制原生风格</string>
    <string name="pref_non_default_theme_notification_blur_title">非默认主题开启通知栏模糊</string>
    <string name="pref_notification_blur_enable_title">通知栏模糊样式修改</string>
    <string name="pref_status_default_folding_first_notification">首条通知默认折叠</string>
    <string name="pref_home_widget_title">内测小组件</string>
    <string name="pref_home_widget_can_drag_to_pa">第三方小部件可拖拽至负一屏</string>
    <string name="pref_home_widget_can_drag_to_pa_summary">只适配了版本号大于等于425003427的内测桌面(因为只有这些版本支持内测小组件)</string>
    <string name="pref_home_drawer_title">抽屉模式</string>
    <string name="pref_home_drawer_category_hide_all">顶部分类删除全部</string>
    <string name="pref_home_drawer_list_hide_edit">分页内删除编辑</string>
    <string name="pref_power_keeper_block_cloud_fps_config">屏蔽云控动态FPS</string>
    <string name="pref_power_keeper_block_cloud_fps_config_summary">需要清除电量和性能数据后生效(右上角跳转电量和性能管理界面)</string>
    <string name="pref_power_keeper_block_view">跳转神隐模式云控界面</string>
</resources>